usuniecie zbednej linii

--- a/ImperialShuttle/ImperialShuttle.vcxproj
+++ b/ImperialShuttle/ImperialShuttle.vcxproj
@@ -86,8 +86,12 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\..\..\..\Informatyka\II rok\Grafika\zajecia\7\tex.h" />
     <ClInclude Include="methods_and_functions.h" />
     <ClInclude Include="vertex.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="z3.bmp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
