--- a/ImperialShuttle/ImperialShuttle.vcxproj.filters
+++ b/ImperialShuttle/ImperialShuttle.vcxproj.filters
@@ -26,5 +26,13 @@
     <ClInclude Include="vertex.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\..\..\Informatyka\II rok\Grafika\zajecia\7\tex.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="z3.bmp">
+      <Filter>Resource Files</Filter>
+    </None>
   </ItemGroup>
 </Project>
